--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,10 @@ html,body{
 	margin-left: 5px;
 	background-repeat: no-repeat;
 }
-.button__headline{
+.button__headline,.button__main_text{
 	background-color: #D6E5F9;
 	padding: 5px;
 	color: #647295;
 	border-radius: 5%;
-
+	margin-left: 5px;
 }
